--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,1 +1,15 @@
 @import './base.css';
+
+#app, body, html {
+    width: 100%;
+    height: 100%;
+}
+
+* {
+    font-family: "Roboto", sans-serif;
+}
+
+.title {
+    font-weight: 900;
+    font-size: 5rem;
+}
