--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -1,3 +1,4 @@
+@use 'variables';
 @import 'base';
 
 #app,
@@ -5,6 +6,7 @@ body,
 html {
   width: 100%;
   height: 100%;
+  background: variables.$background;
 }
 
 * {
