--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -3,8 +3,10 @@ $neumorphism:
   10px 10px 10px #dadada,
   -3px -3px 20px #ffffff;
 
-$text: orange;
+$text: #d0d0d0;
+$text-active: #76e5a8;
 $text-placeholder: #d0d0d0;
+$text-error: rgba(255, 0, 0, 0.5);
 
 $button: #76e5a8;
 $button-color: #ffffff;
